force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule_Item__mdt/tc9_edc__Setup_Withholding_Rule_Item__mdt.object-meta.xml
<CustomObject>
    <description>Post Installation Withholding Rule Item setup</description>
    <label>Setup Withholding Rule Item</label>
    <pluralLabel>Setup Withholding Rule Items</pluralLabel>
</CustomObject>