force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule_Item__mdt/fields/tc9_edc__Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Birth_Date__c</fullName>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>