force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule_Item__mdt/fields/tc9_edc__Cap_Applied__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Cap_Applied__c</fullName>
    <label>Cap Applied</label>
    <length>200</length>
    <type>Text</type>
</CustomField>