force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule_Item__mdt/fields/tc9_edc__Concessional_Contribution_Cap__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Concessional_Contribution_Cap__c</fullName>
    <label>Concessional Contribution Cap</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>