force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule_Item__mdt/fields/tc9_edc__Maximum_Super_Contribution_Base__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Maximum_Super_Contribution_Base__c</fullName>
    <label>Maximum Super Contribution Base</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>