force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule_Item__mdt/fields/tc9_edc__Preservation_Age__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Preservation_Age__c</fullName>
    <label>Preservation Age</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>