force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule_Item__mdt/fields/tc9_edc__Preservation_Age_Treatment__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Preservation_Age_Treatment__c</fullName>
    <label>Preservation Age Treatment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>