force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule_Item__mdt/fields/tc9_edc__Weekly_Maximum_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Weekly_Maximum_Earnings__c</fullName>
    <label>Weekly Maximum Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>