force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule_Item__mdt/fields/tc9_edc__Withholding_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Withholding_Rule__c</fullName>
    <label>Withholding Rule</label>
    <referenceTo>tc9_edc__Setup_Withholding_Rule__mdt</referenceTo>
    <relationshipLabel>Setup Withholding Rule Items</relationshipLabel>
    <relationshipName>Withholding_Rule_Items</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>