force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule_Item__mdt/fields/tc9_edc__Withholding_Rule_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Withholding_Rule_Item_Name__c</fullName>
    <label>Withholding Rule Item Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>